--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://anurse.github.com
+production_url : http://vibrantcode.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
